<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.AddNewItemFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/action_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:text="@string/add_new_item" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/item_name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_item_name"
                    app:layout_constraintBottom_toTopOf="@+id/item_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="AUTOFILL_HINT_NEW_USERNAME"
                    android:hint="@string/new_item_name_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_name_tv" />

                <TextView
                    android:id="@+id/new_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_image"
                    app:layout_constraintBottom_toTopOf="@+id/take_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_name" />

                <Button
                    android:id="@+id/take_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/take_photo"
                    app:layout_constraintBottom_toTopOf="@+id/select_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_image" />

                <Button
                    android:id="@+id/select_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_image"
                    app:layout_constraintBottom_toTopOf="@+id/selected_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/take_photo" />

                <ImageView
                    android:id="@+id/selected_image"
                    android:layout_width="600px"
                    android:layout_height="600px"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/select_image" />

                <TextView
                    android:id="@+id/new_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/selected_image" />

                <com.skydoves.colorpickerview.ColorPickerView
                    android:id="@+id/colorPickerView"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_color" />

                <TextView
                    android:id="@+id/color_picked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/colorPickerView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </FrameLayout>

</layout>